--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 org.gradle.jvmargs = -Xmx4096M
 
-mod_id = template_mod
+mod_id = oxide
 
 minecraft_version = 1.20.1
 enabled_platforms = fabric,forge
 
 mod_version = 1.20.1-0.1.0
-maven_group = com.ordana.template_mod
+maven_group = com.ordana.oxide
 
 parchment_version = 1.20.1:2023.09.03
 quilt_version = 0.20.0-beta.4
