--- a/common/src/main/resources/assets/oxide/models/block/iron_scaffold_stairs/top_inner_south_east.json
+++ b/common/src/main/resources/assets/oxide/models/block/iron_scaffold_stairs/top_inner_south_east.json
@@ -1,6 +1,7 @@
 {
   "parent": "oxide:block/fancy_inner_stairs",
   "textures": {
+    "default": "oxide:block/iron_scaffold_stairs/default",
     "bottom": "oxide:block/iron_scaffold/side",
     "top": "oxide:block/iron_scaffold_stairs/top/lsw",
     "north": "oxide:block/iron_scaffold_stairs/lsw",
