--- a/common/src/main/resources/assets/oxide/models/block/iron_scaffold_stairs/top_base_eastwest.json
+++ b/common/src/main/resources/assets/oxide/models/block/iron_scaffold_stairs/top_base_eastwest.json
@@ -1,11 +1,11 @@
 {
-  "parent": "oxide:block/fancy_stairs",
+  "parent": "oxide:block/fancy_stairs_top",
   "textures": {
-    "top": "oxide:block/iron_scaffold_stairs/vert",
-    "bottom": "oxide:block/iron_scaffold_stairs/top/block",
-    "north": "oxide:block/iron_scaffold_stairs/lsw",
-	"south": "oxide:block/iron_scaffold_stairs/lse",
-	"west": "oxide:block/iron_scaffold_stairs/lat",
-	"east": "oxide:block/iron_scaffold/side_top"
+    "top": "oxide:block/iron_scaffold_stairs/top/block",
+    "bottom": "oxide:block/iron_scaffold_stairs/vert",
+    "north": "oxide:block/iron_scaffold_stairs/lse",
+    "south": "oxide:block/iron_scaffold_stairs/lsw",
+    "west": "oxide:block/iron_scaffold_stairs/lat",
+    "east": "oxide:block/iron_scaffold/side_top"
   }
 }
